# rust

./: .gitignore
docker/: Dockerfile
docker/kubernetes/: example.1.yaml  example.2.yaml  example.3.yaml  hello-world.sh  startup.sh
docker/machine_learning/: Dockerfile
docker/rust/: Dockerfile
hacker_rank/saveprincess/: Cargo.toml  test_input.1.txt
hacker_rank/saveprincess/src/: lib.rs  main.rs
hacker_rank/saveprincess/src/lib/: matrix.rs  mod.rs  seq.rs  vec.rs
saveprincess/: Cargo.toml
saveprincess/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
shell_utils/: notes.sh
wasm/wasm_test/: Cargo.toml  build.sh
wasm/wasm_test/src/: lib.rs  main.rs
