[package]
name = "server"
version = "0.1.0"
authors = ["j-ellis13 <j.ellis@digitalfoundry.com>"]

[dependencies]
hyper = "^0.10"
uuid = "^0.2"
rand = "^0.3"
futures = "^0.1"
iron = "^0.5"
solicit = "^0.4"
#kinglet = "^0.1.0"
nickel = "*"
tiny_http = "^0.5"
tokio-core = "0.1"
pretty_env_logger = "0.1"

